--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <a href="sms:1234&body=hi">Send an SMS iPhone</a>
+    <a href="sms:1234?body=hi">Send an SMS Android</a>
 </body>
 </html>
